--- a/pages/release/release.wxml
+++ b/pages/release/release.wxml
@@ -1,7 +1,7 @@
 <view class="page-body">
   <view class="btn-area" id="buttonContainer">
     <navigator url="/pages/release-enterprise/release-enterprise" hover-class="ohter-navigator">
-      <button type="primary" bindtap="">发布企业招聘信息</button>
+      <button type="primary" bindtap="">发布企业招聘信息1</button>
     </navigator>
     <navigator url="/pages/release-agent/release-agent" hover-class="ohter-navigator">
       <button type="primary" bindtap="">完善代理信息</button>
