--- a/pages/resources/resources.wxml
+++ b/pages/resources/resources.wxml
@@ -44,7 +44,7 @@
       </block>
     </mp-tabs>
     <view class=" weui-cell_input">
-
+     <van-search value="{{ name }}" placeholder="请输入搜索关键词" bind:search="onSearch" bind:cancel="searchCancel" bind:clear="searchCancel"></van-search>
       <!-- <picker mode="region" bindchange="getSearchInfo" value="{{locationInfo}}">
         <view class="picker" wx:if="{{locationInfo && locationInfo.length}}">
           您选中城市：{{locationInfo&& locationInfo[0]}}，{{locationInfo&&locationInfo[1]}}，{{locationInfo&&locationInfo[2]}}
@@ -64,7 +64,7 @@
             <view class="weui-media-box__title">{{item.name||'-'}}</view>
             <view class="weui-media-box__title">{{item.provinceName||''}} {{item.cityName||''}}
               {{activeTab == 0?'规模':'输送量'}}：{{activeTab == 0?item.personScale:item.peopleNumber}}</view>
-            <view class="weui-media-box__desc">发布职位：{{item.jobCount}}
+            <view class="weui-media-box__desc">发布职位：{{item.jobCount||0}}
               {{activeTab == 0?'合作劳务':'合作企业'}}：{{activeTab == 0?item.serviceCompanyCount:item.companyCount}}
             </view>
           </view>
