--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -65,7 +65,7 @@
         </view>
       </view>
     </view>
-    <view hidden="{{loadingMoreHidden ? false : true}}" class="weui-loadmore weui-loadmore_line"
+    <view hidden="{{loadingMoreHidden}}" class="weui-loadmore weui-loadmore_line"
       style='margin-top:60rpx;margin-bottom:30rpx;'>
       <view class="weui-loadmore__tips weui-loadmore__tips_in-line">没有更多啦</view>
     </view>
