--- a/pages/company/company.wxml
+++ b/pages/company/company.wxml
@@ -1,46 +1,46 @@
 <view class="page">
   <view>
-    <image class="banner-image" src="{{company.logo}}"></image>
+    <image class="banner-image" src="{{company.logo||DEFAULT_IMAGE}}"></image>
   </view>
 
   <view class="weui-cell">
-    <view class="weui-cell__bd">{{company.name}}</view>
+    <view class="weui-cell__bd">{{company.name||'-'}}</view>
     <!-- <view class="weui-cell__ft" wx:if="{{isShowEdit}}">
       <button size="mini" plain="true" bindtap="edit">编辑</button>
     </view> -->
   </view>
   <view class="weui-cell">
-    <view class="weui-cell__bd">公司简介:{{company.remark}}</view>
+    <view class="weui-cell__bd">公司简介:{{company.remark||'-'}}</view>
   </view>
   <view class="weui-cell">
-    <view class="weui-cell__bd">公司地址:{{company.provinceStr}} {{company.cityStr}}
-      {{company.countyStr}} {{company.address}}</view>
+    <view class="weui-cell__bd">公司地址:{{company.provinceStr||''}} {{company.cityStr||''}}
+      {{company.countyStr||''}} {{company.address||''}}{{(!company.provinceStr && !company.cityStr&& !company.countyStr && !company.address)?'-':''}}</view>
   </view>
 
   <van-tabs type="card" custom-class="tabs">
     <van-tab title="在招职位">
       <view wx:if="{{true}}">
         <view class="weui-panel__bd" wx:for="{{dataList}}" wx:key="*this">
-          <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <navigator url="/pages/job/job?id={{item.id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
             <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-              <image class="weui-media-box__thumb" src="{{item.image}}" />
-              <image style="width: 100px;height:100px" class1="weui-media-box__thumb" src="" />
+              <image class="weui-media-box__thumb" src="{{item.image||DEFAULT_JOB_IMAGE}}" />
+             
             </view>
             <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-              <view class="weui-media-box__title">{{item.jobRemark}}</view>
-              <view class="weui-media-box__title">{{item.provinceName}} {{item.cityName}}
+              <view class="weui-media-box__title">{{item.jobRemark||''}}</view>
+              <view class="weui-media-box__title">{{item.provinceName||''}} {{item.cityName||''}}
                 年龄{{item.ageBegin}}-{{item.ageEnd}}</view>
               <view class="weui-media-box__desc">
                 <view class="goods-title">
-                  <view wx:if="{{item.jobMoneyType == 1}}">时薪：{{item.jobMoney}}</view>
-                  <view wx:if="{{item.jobMoneyType == 2}}">日薪：{{item.jobMoney}}</view>
-                  <view wx:if="{{item.jobMoneyType == 3}}">月薪：{{item.jobMoney}}</view>
+                  <view wx:if="{{item.jobMoneyType == 1}}">时薪：{{item.jobMoney||0}}</view>
+                  <view wx:if="{{item.jobMoneyType == 2}}">日薪：{{item.jobMoney||0}}</view>
+                  <view wx:if="{{item.jobMoneyType == 3}}">月薪：{{item.jobMoney||0}}</view>
                 </view>
                 <view class="goods-title_right">
-                  <view wx:if="{{item.getMoneyType == 1}}"> 时返：{{item.getMoney}}</view>
-                  <view wx:if="{{item.getMoneyType == 2}}"> 天返：{{item.getMoney}}</view>
-                  <view wx:if="{{item.getMoneyType == 3}}"> 月返：{{item.getMoney}}</view>
-                  <view wx:if="{{item.getMoneyType == 4}}"> 一次返：{{item.getMoney}}</view>
+                  <view wx:if="{{item.getMoneyType == 1}}"> 时返：{{item.getMoney||0}}</view>
+                  <view wx:if="{{item.getMoneyType == 2}}"> 天返：{{item.getMoney||0}}</view>
+                  <view wx:if="{{item.getMoneyType == 3}}"> 月返：{{item.getMoney||0}}</view>
+                  <view wx:if="{{item.getMoneyType == 4}}"> 一次返：{{item.getMoney||0}}</view>
                 </view>
               </view>
             </view>
@@ -60,15 +60,15 @@
     <van-tab title="合作派遣">
       <view wx:if="{{true}}">
         <view class="weui-panel__bd" wx:for="{{dataList1}}" wx:key="*this">
-          <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+          <navigator url="/pages/company/company?id={{item.id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
             <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-              <image class="weui-media-box__thumb" src="{{item.logo}}" />
-              <image style="width: 100px;height:100px" class1="weui-media-box__thumb" src="" />
+              <image class="weui-media-box__thumb" src="{{item.logo||DEFAULT_JOB_IMAGE}}" />
+             
             </view>
             <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-              <view class="weui-media-box__title">{{item.name}}</view>
-              <view class="weui-media-box__title">{{item.provinceName}} {{item.cityName}} 规模：{{item.peopleNumber}}</view>
-              <view class="weui-media-box__desc">发布职位：{{item.jobCount}} 合作企业：{{item.companyCount}}</view>
+              <view class="weui-media-box__title">{{item.name||''}}</view>
+              <view class="weui-media-box__title">{{item.provinceName||''}} {{item.cityName||''}}} 规模：{{item.peopleNumber||'-'}}</view>
+              <view class="weui-media-box__desc">发布职位：{{item.jobCount||'-'}} 合作企业：{{item.companyCount||'-'}}</view>
             </view>
           </navigator>
         </view>
