--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -41,7 +41,7 @@
         <view class="img-box">
           <image src="{{item.image|| DEFAULT_IMAGE}}" class="image" mode="aspectFill" lazy-load="true" />
         </view>
-        <view class="goods-title">{{item.title|| '-'}}</view>
+        <view class="goods-title">{{item.title|| ''}}</view>
 
         <view class='goods-box__row goods-font'>
           <view class="goods-title">{{item.provinceName|| ''}} {{item.cityName|| ''}}</view>
