--- a/pages/company-edit/company-edit.wxss
+++ b/pages/company-edit/company-edit.wxss
@@ -1,21 +1,28 @@
-/* example/input/input.wxss */
+/* pages/release-company/release-company.wxss */
 @import '../common.wxss';
 
-/* 头部部分的内容 */
-.container {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  color: var(--blodTitle);
-  /* background-color: #f5f5f5; */
-  height: 100%;
-  padding-bottom: 200rpx;
-  overflow-y: auto;
+.index-hd {
+  padding: 40px 40px 20px;
+  text-align: center;
 }
 
-.save {
-  margin-top: 30rpx;
+.index-bd {
+  padding: 0 15px 20px;
 }
+
+.index-logo {
+  width: 80px;
+  height: 80px;
+}
+
+.index-desc {
+  /* margin-top: 10px; */
+  color: #888888;
+  /* font-size: 14px; */
+  font-size: 14px;
+}
+
+
 
 /* 弹框 */
 .modalDlg {
@@ -98,7 +105,6 @@
   font-size: 30rpx;
   border: 0;
 }
-
 .picker{
   height: 60rpx;
   font-size: 24rpx;
@@ -113,7 +119,4 @@
   display: flex;
     align-content: center;
     align-items: center;
-}
-.save{
-  margin: 40rpx;
 }
