第三次提交

--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -67,9 +67,9 @@ page {
 }
 
 .goods-title_right {
-  padding: 0 20rpx;
+  /* padding: 0 20rpx; */
 }
 
 .goods-font {
-  font-size: 30rpx;
+  font-size: 28rpx;
 }
