--- a/pages/job/job.wxml
+++ b/pages/job/job.wxml
@@ -1,105 +1,65 @@
 <view class="job">
+    <van-cell-group class="cell-group">
+        <image src="{{jobObj.image|| DEFAULT_IMAGE}}" style="width:96%;height:300rpx;margin-left:2%;"></image>
+    </van-cell-group>
     <view class="job_remark">{{jobObj.jobRemark||'-'}}</view>
     <view class="job_money">
-        <view class="job_type">{{jobObj.jobTypeName||'-'}}</view>
+        <view class="job_type">{{jobObj.resourceName||'-'}}</view>
         <view class="money_type" style="flex:1;">{{jobObj.jobMoneyType == 1?'时薪':jobObj.jobMoneyType ==
             2?'日薪':'月薪'}}:{{jobObj.jobMoney||0}}</view>
         <view class="money_type" style="flex:1;">{{jobObj.getMoneyType == 1?'时返':jobObj.getMoneyType ==
             2?'天返':jobObj.getMoneyType == 3?'月返':'一次返'}}:{{jobObj.getMoney||0}}</view>
     </view>
-    <van-cell-group class="cell-group">
-        <van-cell >
-            <view slot="title" bindtap="toCompany" data-id="{{jobObj.id}}" data-name="{{jobObj.companyName}}">
-              公司名称：  {{jobObj.companyName||'-'}}
-            </view>
-        </van-cell>
-    </van-cell-group>
-    <van-cell-group class="cell-group">
-        <van-cell>
-            <view slot="title">
-                职位: {{jobObj.resourceName||'-'}}
-            </view>
+   
+    <van-cell border="{{false}}" >
+        <view slot="title">
+            年龄: {{jobObj.ageBegin|| ''}}-{{jobObj.ageEnd|| ''}}
+        </view>
 
-        </van-cell>
-
-    </van-cell-group>
-    <van-cell-group class="cell-group">
-        <van-cell>
-            <view slot="title">
-                年龄: {{jobObj.ageBegin|| ''}}-{{jobObj.ageEnd|| ''}}
-            </view>
-
-        </van-cell>
-
-    </van-cell-group>
-    <van-cell-group class="cell-group">
-
-        <van-cell>
-            <view slot="title">
-                联系人: {{jobObj.contactsPeople1||'-'}}
-            </view>
-
-        </van-cell>
-    </van-cell-group>
-    <van-cell-group class="cell-group">
-
-        <van-cell icon="phone">
-            <view slot="title">
-                {{jobObj.contactsPhone1||'-'}}
-            </view>
-
-        </van-cell>
-    </van-cell-group>
-    <van-cell-group class="cell-group" wx:if="{{jobObj && jobObj.contactsPeople2}}">
-        <van-cell>
-            <view slot="title">
-                第二联系人: {{jobObj.contactsPeople2||'-'}}
-            </view>
-        </van-cell>
-
-    </van-cell-group>
-    <van-cell-group class="cell-group" wx:if="{{jobObj && jobObj.contactsPhone2}}">
-
-        <van-cell icon="phone">
-            <view slot="title">
-                {{jobObj.contactsPhone2||'-'}}
-            </view>
-
-        </van-cell>
-
-    </van-cell-group>
-    <van-cell-group class="cell-group" wx:if="{{jobObj && jobObj.contactsPeople3}}">
-        <van-cell>
-            <view slot="title">
-                第三联系人: {{jobObj.contactsPeople3||'-'}}
-            </view>
-        </van-cell>
-
-    </van-cell-group>
-    <van-cell-group class="cell-group" wx:if="{{jobObj && jobObj.contactsPhone3}}">
-        <van-cell icon="phone">
-            <view slot="title">
-                {{jobObj.contactsPhone3||'-'}}
-            </view>
-
-        </van-cell>
-    </van-cell-group>
-    <van-cell-group class="cell-group">
-
-        <van-cell icon="location">
-            <view slot="title">
-                {{jobObj.provinceName+jobObj.cityName+jobObj.countyName+jobObj.address}}
-            </view>
-
-        </van-cell>
-    </van-cell-group>
+    </van-cell>
+    <van-cell border="{{false}}" >
+        <view slot="title" bindtap="toCompany" data-id="{{jobObj.id}}" data-name="{{jobObj.companyName}}">
+            公司名称： {{jobObj.companyName||'-'}}
+        </view>
+    </van-cell>
 
 
-    <van-cell-group class="cell-group">
-        <van-cell title="职位特点" value="" label="{{jobObj.getMoneyRemark||'-'}}" />
-    </van-cell-group>
-    <van-cell-group class="cell-group" >
-        <van-image width="15rem" height="15rem" fit="contain" src="{{jobObj.image}}" />
-    </van-cell-group>
+
+
+
+    <view style="height:15rpx;width:100%;background:#f2f2f2;margin:10rpx 0;"></view>
+
+    <van-cell title="岗位详情" value="" label="{{jobObj.getMoneyRemark||'-'}}" border="{{false}}" />
+
+    <view style="height:15rpx;width:100%;background:#f2f2f2;margin:10rpx 0;"></view>
+    <van-cell border="{{false}}" >
+        <view slot="title">
+            联系人: {{jobObj.contactsPeople1||'-'}}
+        </view>
+    </van-cell>
+
+
+   
+
+
+
+
+    <van-cell border="{{false}}" >
+        <view slot="title">
+            地 址: {{jobObj.provinceName+jobObj.cityName+jobObj.countyName+jobObj.address}}
+        </view>
+
+    </van-cell>
+    <van-cell border="{{false}}" >
+        <view slot="title" style="display:flex;" data-reply-phone="{{jobObj.contactsPhone1}}" bindtap="phoneCall">
+            电 话: <view>{{jobObj.contactsPhone1||'-'}}</view>
+            <view wx:if="jobObj.contactsPhone1"> (点击拨打电话)</view>
+        </view>
+    </van-cell>
+
+
+
+
+
 
 </view>
