--- a/pages/my-release/my-release.wxml
+++ b/pages/my-release/my-release.wxml
@@ -4,72 +4,73 @@
       <button type="primary" bindtap="">{{activeTab == 0?'发布招聘信息':'发布关联企业信息'}}</button>
     </navigator>
   </view>
-
   <view class="order-list-wrap">
-    <mp-tabs tabs="{{tabs}}" activeTab="{{activeTab}}" swiperClass="weui-tabs-swiper" bindtabclick="onTabCLick"
-      bindchange="onChange" activeClass="tab-bar-title__selected">
+    <mp-tabs tabs="{{tabs}}" activeTab="{{activeTab}}" swiperClass="weui-tabs-swiper" bindtabclick="onTabCLick" bindchange="onChange" activeClass="tab-bar-title__selected">
       <block wx:for="{{tabs}}" wx:key="title">
         <view class="tab-content" slot="tab-content-{{index}}">
-
-          <view wx:if="{{activeTab == 0}}">
-            <view class="weui-panel__bd" wx:for="{{dataList}}" wx:key="id">
-              <navigator url="/pages/release-enterprise/release-enterprise?id={{item.id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-                <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-                  <image class="weui-media-box__thumb" src="{{item.image||DEFAULT_IMAGE }}" />
-                  <!-- <image style="width: 100px;height:100px" class1="weui-media-box__thumb" src="" /> -->
-                </view>
-                <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-                  <view class="weui-media-box__title">{{item.companyName||""}} {{item.jobRemark||""}}</view>
-                  <view class="weui-media-box__title">{{item.provinceName||""}} {{item.cityName||""}}
-                    年龄：{{item.ageBegin}}-{{item.ageEnd}}</view>
-                  <view class="weui-media-box__desc">
-                    <view wx:if="{{item.jobMoneyType == 1}}">时薪：{{item.jobMoney||"0"}}</view>
-                    <view wx:if="{{item.jobMoneyType == 2}}">日薪：{{item.jobMoney||"0"}}</view>
-                    <view wx:if="{{item.jobMoneyType == 3}}">月薪：{{item.jobMoney||"0"}}</view>
-                    <view wx:if="{{item.getMoneyType == 1}}">时返：{{item.getMoney||"0"}}</view>
-                    <view wx:if="{{item.getMoneyType == 2}}">天返：{{item.getMoney||"0"}}</view>
-                    <view wx:if="{{item.getMoneyType == 3}}">月返：{{item.getMoney||"0"}}</view>
-                    <view wx:if="{{item.getMoneyType == 4}}"> 一次返返：{{item.getMoney||"0"}}</view>
-                  </view>
-                </view>
-              </navigator>
-            </view>
-            <view hidden="{{loadingMoreHidden ? true : false}}" class="weui-loadmore weui-loadmore_line"
-              style='margin-top:60rpx;margin-bottom:30rpx;'>
-              <view class="weui-loadmore__tips weui-loadmore__tips_in-line">没有更多啦</view>
-            </view>
-          </view>
           <!-- <view wx:else class="order-emtpy">
             <loading wx:if="{{!mounted}}"></loading>
             <empty wx:else imgSrc="https://oss.angsi.com/frontend-picture/1571051152978.png" title="没数据喔！"
               info="是时候敞开胸怀逛一逛了" btnText="{{emptyProps.btnText}}" bind:onBtnClick="onEmptyBtnClick" />
           </view> -->
-          
-          <view wx:if="{{activeTab == 1}}">
-            <view class="weui-panel__bd" wx:for="{{dataList1}}" wx:key="id">
-              <navigator url="/pages/company/company?id={{item.id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-                <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-                  <image class="weui-media-box__thumb" src="{{item.logo|| DEFAULT_COMPANY_IMAGE}}" />
-                  <!-- <image style="width: 100px;height:100px" class1="weui-media-box__thumb" src="" /> -->
-                </view>
-                <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-                  <view class="weui-media-box__title">{{item.name||'-'}}</view>
-                  <view class="weui-media-box__title">{{item.provinceName||'-'}} {{item.cityName||'-'}}
-                    规模：{{item.personScale||"-"}}</view>
-                  <view class="weui-media-box__desc">
-                    <view>发布职位：{{item.jobCount||"-"}} 合作劳务：{{item.serviceCompanyCount||"-"}}</view>
-                  </view>
-                </view>
-              </navigator>
-            </view>
-            <view hidden="{{loadingMoreHidden ? true : false}}" class="weui-loadmore weui-loadmore_line"
-              style='margin-top:60rpx;margin-bottom:30rpx;'>
-              <view class="weui-loadmore__tips weui-loadmore__tips_in-line">没有更多啦</view>
-            </view>
-          </view>
         </view>
       </block>
     </mp-tabs>
+    <view class="list tab-content">
+      <view wx:if="{{activeTab == 0}}">
+        <view class="weui-panel__bd" wx:for="{{dataList}}" wx:key="id">
+          <navigator url="/pages/release-enterprise/release-enterprise?id={{item.id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+            <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+              <image class="weui-media-box__thumb" src="{{item.image||DEFAULT_IMAGE }}" />
+              <!-- <image style="width: 100px;height:100px" class1="weui-media-box__thumb" src="" /> -->
+            </view>
+            <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+              <view class="weui-media-box__title">
+                {{item.companyName||""}} {{item.jobRemark||""}}
+              </view>
+              <view class="weui-media-box__title">
+                {{item.provinceName||""}} {{item.cityName||""}}
+                    年龄：{{item.ageBegin}}-{{item.ageEnd}}
+              </view>
+              <view class="weui-media-box__desc">
+                <view wx:if="{{item.jobMoneyType == 1}}">时薪：{{item.jobMoney||"0"}}</view>
+                <view wx:if="{{item.jobMoneyType == 2}}">日薪：{{item.jobMoney||"0"}}</view>
+                <view wx:if="{{item.jobMoneyType == 3}}">月薪：{{item.jobMoney||"0"}}</view>
+                <view wx:if="{{item.getMoneyType == 1}}">时返：{{item.getMoney||"0"}}</view>
+                <view wx:if="{{item.getMoneyType == 2}}">天返：{{item.getMoney||"0"}}</view>
+                <view wx:if="{{item.getMoneyType == 3}}">月返：{{item.getMoney||"0"}}</view>
+                <view wx:if="{{item.getMoneyType == 4}}">一次返返：{{item.getMoney||"0"}}</view>
+              </view>
+            </view>
+          </navigator>
+        </view>
+        <view hidden="{{loadingMoreHidden ? true : false}}" class="weui-loadmore weui-loadmore_line" style='margin-top:60rpx;margin-bottom:30rpx;'>
+          <view class="weui-loadmore__tips weui-loadmore__tips_in-line">没有更多啦</view>
+        </view>
+      </view>
+      <view wx:if="{{activeTab == 1}}">
+        <view class="weui-panel__bd" wx:for="{{dataList1}}" wx:key="id">
+          <navigator url="/pages/company/company?id={{item.id}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+            <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+              <image class="weui-media-box__thumb" src="{{item.logo|| DEFAULT_COMPANY_IMAGE}}" />
+              <!-- <image style="width: 100px;height:100px" class1="weui-media-box__thumb" src="" /> -->
+            </view>
+            <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+              <view class="weui-media-box__title">{{item.name||'-'}}</view>
+              <view class="weui-media-box__title">
+                {{item.provinceName||'-'}} {{item.cityName||'-'}}
+                    规模：{{item.personScale||"-"}}
+              </view>
+              <view class="weui-media-box__desc">
+                <view>发布职位：{{item.jobCount||"-"}} 合作劳务：{{item.serviceCompanyCount||"-"}}</view>
+              </view>
+            </view>
+          </navigator>
+        </view>
+        <view hidden="{{loadingMoreHidden ? true : false}}" class="weui-loadmore weui-loadmore_line" style='margin-top:60rpx;margin-bottom:30rpx;'>
+          <view class="weui-loadmore__tips weui-loadmore__tips_in-line">没有更多啦</view>
+        </view>
+      </view>
+    </view>
   </view>
-
 </view>
